classDiagram
direction TB
    class User {
	    +id
	    +name
	    +email
	    +password
	    +created_at
	    +login()
	    +register()
	    +resetPassword()
	    +getActivities()
	    +getMatches()
	    +sendMessage()
    }

    class Activity {
	    +id
	    +title
	    +description
	    +date
	    +location
	    +creator_id
	    +create()
	    +edit()
	    +addParticipant(user)
	    +addDiscussion(user, content)
	    +addExpense(user, amount)
	    +addReview(user, score, comment)
    }

    class Match {
	    +id
	    +user_id
	    +target_user_id
	    +status
	    +created_at
	    +accept()
	    +reject()
    }

    class ChatMessage {
	    +id
	    +activity_id
	    +sender_id
	    +content
	    +timestamp
	    +send()
	    +delete()
    }

    class Expense {
	    +id
	    +activity_id
	    +user_id
	    +amount
	    +description
	    +created_at
	    +split()
    }

    class Review {
	    +id
	    +activity_id
	    +user_id
	    +score
	    +comment
	    +created_at
	    +submit()
    }

    class ActivityParticipant {
	    +id
	    +activity_id
	    +user_id
	    +joined_at
    }

    class ActivityDiscussion {
	    +id
	    +activity_id
	    +user_id
	    +content
	    +created_at
    }

    User -->  Activity : 
    User  -->  Match : 
    User  --> ChatMessage : 
    User  -->  Expense : 
    User  -->  Review : 
    User -->  ActivityParticipant : 
    User -->  ActivityDiscussion : 
    Activity  -->  ActivityParticipant : 
    Activity -->  ActivityDiscussion : 
    Activity -->  ChatMessage : 
    Activity  -->  Expense : 
    Activity -->  Review : 

